# avCedia

./: Analysis.tar  QA_FINETUNNING_AV.csv  README.md  README.md~  pyproject.toml
Analysis/: analysis_data.ipynb  part_1.csv  part_10.csv  part_2.csv  part_3.csv  part_4.csv  part_5.csv  part_6.csv  part_7.csv  part_8.csv  part_9.csv
app/: streamlit_app.py  streamlit_app_data.py
app/langchain_code/: bases.py  chains.py  data_augmentation_chains.py  model.py  utils.py
app/static/: 10 . CAN -DECISION 486-31-53.docx  2. MARCAS- Codigo-Organico-Economia-Social-de-los-Conocimientos-105-126.docx  3.Instructivo para Llenar el Formulario de Registro de Signos Distintivos.docx  4. INSTRUCTIVO.docx  5.MANUAL DE MARCA part 2.docx  6.MANUAL DE MARCA part 3.docx  7.MANUAL DE MARCA part 4.docx  8.MANUAL DE MARCA parte 5.docx  9.REGLAS DE MARCAS.docx  MANUAL DE MARCA parte 1..docx
data_process/: ABREVIATION_QA_DATASET.xlsx  QA_FINETUNNING_AV_data_process.csv  QA_FINETUNNING_AV_pt1 - copia.csv  QA_FINETUNNING_AV_pt1.csv  QA_FINETUNNING_AV_pt1_Stadistics.csv  QA_FINETUNNING_AV_pt2.csv
