[tool.poetry]
name = "streamlit-project"
version = "0.1.0"
description = ""
authors = ["CosmicAdc <andresbloc@hotmail.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-chroma = "^0.1.4"
pandas = "^2.2.3"
langchain-cohere = "^0.3.0"
langchain-unstructured = "^0.1.5"
langchain-experimental = "^0.3.1"
pypdf = "^5.0.0"
langchain-ollama = "^0.2.0"
docx2txt = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
